force-app/main/default/objects/Account/fields/account_field_1__c.field-meta.xml
<CustomField>
    <fullName>account_field_1__c</fullName>
    <label>account field 1</label>
    <type>Date</type>
</CustomField>