force-app/main/default/objects/Account/fields/unique_account_field__c.field-meta.xml
<CustomField>
    <fullName>unique_account_field__c</fullName>
    <externalId>true</externalId>
    <label>unique account field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>