force-app/main/default/objects/Account/recordTypes/account_record_type_1.recordType-meta.xml
<RecordType>
    <fullName>account_record_type_1</fullName>
    <active>true</active>
    <label>account record type 1</label>
</RecordType>