force-app/main/default/objects/Account/validationRules/account_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>account_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AnnualRevenue &lt; 100</errorConditionFormula>
    <errorDisplayField>account_field_1__c</errorDisplayField>
    <errorMessage>Check with annual revenue it is less than 100</errorMessage>
</ValidationRule>